[package]
name = "webstrings"
version = "0.1.0"
edition = "2021"
description = "A web scanner to crawl links, JS strings, and CSP URLs for interesting secrets and vulnerabilities."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["full"] }
regex = "1.10.2"
lazy_static = "1.4.0"
scraper = "0.18.1"
dashmap = "5.5.3"

[[bin]]
name = "webstrings"
path = "src/main.rs"
